# fastapi-async-sample

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose-dev.yml  docker-compose.yml
backend/app/alembic/versions/: 2023-03-04-20-26_92073834e2a2.py
backend/app/app/: main.py
backend/app/app/api/: deps.py
backend/app/app/api/v1/: api.py
backend/app/app/api/v1/endpoints/: user.py  weather.py
backend/app/app/core/: config.py
backend/app/app/crud/: user_crud.py
backend/app/app/db/: init_db.py
backend/app/app/models/: user_model.py
backend/app/app/schemas/: common_schema.py  user_schema.py
nginx-config-files/: app.nginx.template
rust.server/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.prod
rust.server/src/: handlers.rs  lib.rs  main.rs
rust.server/src/models/: configuration.rs  mod.rs
rust.server/src/services/: postgres.rs
rust.server/src/utils/: mod.rs
