[package]
name = "rustserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "macros", "all-types"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
redis = { version = "0.22", features = ["tokio-comp"] }
axum = "0.6"
hyper = { version = "0.14", features = ["full"] }
tower-http = { version = "0.4", features = ["cors", "set-header"] }
tower-service = "0.3.2"
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
chrono = { version = "0.4", feature = ["default", "serde"] }
axum-macros = "0.3.5"
